allow-3000-sg.tf
resource "aws_security_group" "allow_ssh_3000" {
  name        = "allow_ssh_3000"
  description = "Allow ssh and 3000 inbound traffic"
  vpc_id      = aws_vpc.MyVPC.id

  ingress {
    description = "Allow SSH from vpc CIDR only"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.MyVPC.cidr_block]
  }

    ingress {
    description = "Allow 3000 from vpc CIDR only"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.MyVPC.cidr_block]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
